--- a/styles/events.css
+++ b/styles/events.css
@@ -68,7 +68,7 @@ section {
 
 section > div,
 div.bg {
-  background-image: url(https://images.pexels.com/photos/279/black-and-white-branches-tree-high.jpg?cs=srgb&dl=bark-black-and-white-branches-279.jpg&fm=jpg);
+  background-image: url(https://wallpapers-fenix.eu/full/141214/142530865.jpg);
   background-position: center;
   background-size: cover; }
 
