--- a/styles/slider_style.css
+++ b/styles/slider_style.css
@@ -14,6 +14,7 @@
     width: 650px;
     height: 450px;
 }
+
 .slide-text{
   float:right;
   margin-top: -340px;
@@ -23,6 +24,16 @@
   margin-left:900px;
   margin-right: 85px;
 }
+@media (max-width: 1200px){
+  .slide-text{
+    float:right;
+    margin-top: -340px;
+    font-family: georgia;
+    font-size: 1em;
+    text-align: center;
+    margin-left:900px;
+    margin-right: -360px;
+  }}
  .slide-text img{
    weight:20px;
    height: 20px;
